# maki

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  flake.nix
.github/workflows/: deploy.yml
content/posts/leptos/: ssg-guide.md
content/posts/rust/: memory-layout.md
public/styles/: archive.css  base.css  footer.css  layout.css  markdown.css  navbar.css  not-found.css  post.css  syntax.css  tags.css  variables.css
src/: app.rs  base.rs  content.rs  lib.rs  main.rs
src/components/: content_tree.rs  footer.rs  link.rs  markdown.rs  mod.rs  navbar.rs
src/models/: mod.rs  post.rs
src/pages/: archive.rs  home.rs  mod.rs  not_found.rs  post.rs  static_page.rs  tag_posts.rs  tags.rs
