[package]
name = "maki"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
leptos = { version = "0.7.8", features = ["ssr"] }
leptos_router = { version = "0.7.8", features = ["ssr"] }
futures = "0.3"

[build-dependencies]
walkdir = "2"
pulldown-cmark = "0.12"
yaml-front-matter = "0.1"
syntect = "5.2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
